examples/invalid/illegal_request_header_host.reqlang
vars = []
secrets = []

[envs]

[prompts]
---
GET / HTTP/1.1
host: https://example.com

---
HTTP/1.1 200 OK

---
